correct margin on mobile

--- a/ma5/q/debate.css
+++ b/ma5/q/debate.css
@@ -494,7 +494,6 @@ and (max-width : 930px) {
     .content .span33 {
         margin-bottom: 30px;
         margin-top: 30px;
-        margin-right: -8%;
         width: 94%;
     }
 
